# cobalt-reed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml  validate.yml
src/cobalt/: __init__.py  cli.py  deadcode.py  flattener.py  mangler.py  minifier.py  validator.py
src/starlight/: __init__.py  cli.py  deadcode.py  flattener.py  mangler.py  minifier.py  obfuscator.py
tests/: test_cobalt.py  test_starlight.py
